# best-of-ai-agent

./: .gitignore  .replit  DOCUMENTATION.md  Instructions.md  MODULAR_ICML_FIX.md  REPLIT_AUTHENTICATION_FIXES.md  REPLIT_TIMEOUT_FIXES.md  REPLIT_ZOOM_FIXES.md  app.py  pyproject.toml  render.yaml  replit.nix  replit_fix.md  requirements-render.txt  requirements.txt  run.py  run_app.py  sample_urls.py  test_lapl.py  test_newspapers_extraction.py  test_replit_auth.py
.streamlit/: config.toml
attached_assets/: content-1748526218171.md
document_capsules/: NEWSPAPER ELEMENTS.docx
extractors/: __init__.py  espn_extractor.py  lapl_extractor.py  newspaperarchive_extractor.py  newspapers_extractor.py  newspapers_extractor_optimized.py  newspapers_extractor_original_backup.py  url_extractor.py
feature-docs/: CONTENT_TRUNCATION_FIX.md  ICML_CONVERTER_UPDATE.md  NUMPY_REPLIT_FIX.md  PRD_Clipboard_Removal_and_Document_Enhancement.md  README.md  REFACTORING_SUMMARY.md  REPLIT_TIMEOUT.md
utils/: batch_processor.py  capsule_parser.py  credential_manager.py  document_processor.py  google_drive_manager.py  icml_converter.py  logger.py  modular_icml_converter.py  newspaper_converter.py  paragraph_formatter.py  processor.py  storage_manager.py
