[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.12.3",
    "browser-cookie3==0.19.1",
    "docx==0.2.4",
    "markdown==3.7",
    "opencv-python==4.10.0.84",
    "pandas>=2.2.3",
    "pandoc==2.4",
    "pytesseract==0.3.13",
    "python-docx-replace==0.4.4",
    "replit-object-storage==1.0.2",
    "requests==2.32.3",
    "selenium-wire==5.1.0",
    "selenium==4.27.1",
    "setuptools==75.6.0",
    "streamlit==1.40.2",
    "undetected-chromedriver==3.5.5",
    "webdriver-manager==4.0.2",
    "google-api-python-client==2.154.0",
    "google-auth==2.36.0",
    "google-auth-oauthlib==1.2.1",
]
